# medi-cabinet

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
config/: __init__.py  config.py
data/: README.md  drug_interactions.json
docs/: ARCHITECTURE.md  USER_GUIDE.md  architecture-diagram.excalidraw
migrations/: README.md  env.py
migrations/versions/: 001_initial_schema.py  002_add_routines.py  003_add_drug_interactions.py  004_add_cost_tracking.py
scripts/: README.md  __init__.py  seed_data.py
src/: __init__.py  bot.py  commands.py  database.py  parsers.py  scheduler.py  utils.py
src/llm/: README.md  __init__.py  base.py  factory.py  parser.py  tools.py
src/llm/providers/: __init__.py  anthropic.py  groq.py  openai.py
src/services/: README.md  __init__.py  analytics_service.py  image_service.py  interaction_service.py  routine_service.py
tests/: README.md  __init__.py  conftest.py  test_commands.py  test_database.py  test_parsers.py  test_scheduler.py  test_utils.py
tests/test_llm/: test_factory.py  test_llm_parser.py  test_providers.py
tests/test_services/: test_analytics_service.py  test_analytics_service_unit.py  test_image_service_unit.py  test_interaction_service.py  test_parser_extensions.py  test_routine_service.py  test_routine_service_unit.py
